[package]
name = "rustix3"
version = "0.2.0"
edition = "2024"
authors = ["Dmitriy Sergeev <xaneets@gmail.com>"]
description = "API lib for 3x-ui panel"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Xaneets/rustix3"
homepage = "https://github.com/Xaneets/rustix3"

keywords = ["x-ui", "3x-ui", "api", "xray-core", "vpn"]
categories = ["development-tools"]
[dependencies]
futures = "0.3.31"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.17"
thiserror = "2.0.11"
tracing = "0.1.41"
serde_with = { version = "3.14.0", features = ["json"] }


[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
